[gd_scene load_steps=14 format=4 uid="uid://bw6x1ye1a8wmn"]

[ext_resource type="Script" uid="uid://dubxvqp43ruxu" path="res://rooms/room.gd" id="1_d17c4"]
[ext_resource type="Texture2D" uid="uid://vsi83u47fp53" path="res://assets/derelict_tiles_untied.png" id="2_2ws8c"]
[ext_resource type="PackedScene" uid="uid://52g2a280nwl0" path="res://level_pieces/transition_door.tscn" id="3_xlg2d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fugp7"]
texture = ExtResource("2_2ws8c")
margins = Vector2i(1, 1)
separation = Vector2i(1, 1)
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0
0:10/0 = 0
1:10/0 = 0
0:11/0 = 0
1:11/0 = 0
0:12/0 = 0
1:12/0 = 0
0:13/0 = 0
1:13/0 = 0
0:14/0 = 0
1:14/0 = 0
0:15/0 = 0
1:15/0 = 0
0:16/0 = 0
1:16/0 = 0
0:17/0 = 0
1:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0
0:23/0 = 0
1:23/0 = 0
0:24/0 = 0
1:24/0 = 0
0:25/0 = 0
1:25/0 = 0
0:26/0 = 0
1:26/0 = 0
0:27/0 = 0
1:27/0 = 0
0:28/0 = 0
1:28/0 = 0
0:29/0 = 0
1:29/0 = 0
0:30/0 = 0
1:30/0 = 0
2:0/0 = 0
3:0/0 = 0
3:1/0 = 0
2:1/0 = 0
2:2/0 = 0
3:2/0 = 0
2:3/0 = 0
3:3/0 = 0
2:4/0 = 0
2:5/0 = 0
2:6/0 = 0
2:7/0 = 0
3:7/0 = 0
2:8/0 = 0
3:4/0 = 0
3:5/0 = 0
3:6/0 = 0
3:8/0 = 0
2:12/0 = 0
3:13/0 = 0
3:14/0 = 0
3:15/0 = 0
3:16/0 = 0
3:17/0 = 0
2:13/0 = 0
2:11/0 = 0
2:10/0 = 0
3:12/0 = 0
3:11/0 = 0
3:10/0 = 0
3:9/0 = 0
2:9/0 = 0
2:14/0 = 0
2:15/0 = 0
3:18/0 = 0
3:19/0 = 0
2:16/0 = 0
2:17/0 = 0
2:18/0 = 0
2:19/0 = 0
2:20/0 = 0
2:21/0 = 0
2:22/0 = 0
2:23/0 = 0
2:24/0 = 0
2:25/0 = 0
3:20/0 = 0
3:21/0 = 0
3:22/0 = 0
3:23/0 = 0
3:24/0 = 0
3:25/0 = 0
3:26/0 = 0
3:27/0 = 0
3:28/0 = 0
3:29/0 = 0
3:30/0 = 0
2:30/0 = 0
2:31/0 = 0
3:31/0 = 0
2:27/0 = 0
2:26/0 = 0
2:28/0 = 0
2:29/0 = 0
1:31/0 = 0
1:32/0 = 0
2:32/0 = 0
3:32/0 = 0
3:33/0 = 0
3:34/0 = 0
3:35/0 = 0
1:36/0 = 0
1:37/0 = 0
1:38/0 = 0
0:38/0 = 0
0:37/0 = 0
0:36/0 = 0
0:35/0 = 0
0:34/0 = 0
0:33/0 = 0
0:32/0 = 0
0:39/0 = 0
0:40/0 = 0
0:31/0 = 0
1:33/0 = 0
1:34/0 = 0
0:41/0 = 0
0:42/0 = 0
0:43/0 = 0
1:35/0 = 0
1:39/0 = 0
1:40/0 = 0
1:41/0 = 0
1:42/0 = 0
2:38/0 = 0
2:37/0 = 0
2:36/0 = 0
2:35/0 = 0
2:39/0 = 0
2:40/0 = 0
2:41/0 = 0
2:42/0 = 0
1:43/0 = 0
1:44/0 = 0
1:45/0 = 0
2:34/0 = 0
2:43/0 = 0
2:44/0 = 0
2:45/0 = 0
2:33/0 = 0
3:36/0 = 0
3:37/0 = 0
3:38/0 = 0
3:39/0 = 0
3:40/0 = 0
3:41/0 = 0
3:42/0 = 0
3:43/0 = 0
3:44/0 = 0
3:45/0 = 0
3:46/0 = 0
2:47/0 = 0
2:46/0 = 0
3:47/0 = 0
3:48/0 = 0
0:44/0 = 0
0:45/0 = 0
0:46/0 = 0
0:47/0 = 0
0:48/0 = 0
1:49/0 = 0
1:48/0 = 0
1:47/0 = 0
1:46/0 = 0
2:48/0 = 0
2:49/0 = 0
2:50/0 = 0
3:49/0 = 0
2:54/0 = 0
1:53/0 = 0
1:52/0 = 0
1:51/0 = 0
1:50/0 = 0
2:52/0 = 0
2:53/0 = 0
1:55/0 = 0
1:54/0 = 0
0:49/0 = 0
0:50/0 = 0
0:51/0 = 0
0:52/0 = 0
0:53/0 = 0
0:54/0 = 0
0:55/0 = 0
3:50/0 = 0
3:51/0 = 0
3:52/0 = 0
3:53/0 = 0
2:51/0 = 0
3:54/0 = 0

[sub_resource type="TileSet" id="TileSet_fcxr8"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fugp7")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d17c4"]
size = Vector2(64.25, 72)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2ws8c"]
polygon = PackedVector2Array(107.375, 329, 123.375, 329, 123.375, 257, 107.375, 257)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlg2d"]
size = Vector2(64.25, 72)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g5msa"]
polygon = PackedVector2Array(107.375, 329, 123.375, 329, 123.375, 257, 107.375, 257)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya37f"]
size = Vector2(1922.75, 58)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_xlvgl"]
polygon = PackedVector2Array(2, -83, 2.375, -73, 1923.38, -73, 1923, -86)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlvgl"]
size = Vector2(512, 65)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rjq5q"]
polygon = PackedVector2Array(705, -132.5, 705, -68.5, 1218, -68.5, 1218, -132.5)

[node name="TJunctionDown" type="Node2D"]
script = ExtResource("1_d17c4")
roomType = 6

[node name="TileMapLayers" type="Node2D" parent="."]

[node name="DerelictBG" type="TileMapLayer" parent="TileMapLayers"]
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAbAAYAAAABADcAAAAaAAYAAAABADcAAAAZAAYAAAABADcAAAAYAAcAAAABADcAAAAXAAgAAAABADcAAAAWAAkAAAABADcAAAAVAAoAAAABADcAAAAUAAoAAAABADcAAAATAAsAAAABADcAAAASAAwAAAABADcAAAARAAwAAAABADcAAAAQAA0AAAABADcAAAAPAA4AAAABADcAAAAOAA4AAAABADcAAAANAA8AAAABADcAAAAMAA8AAAABADcAAAALABAAAAABADcAAAAKABAAAAABADcAAAAJABAAAAABADcAAAAIABEAAAABADcAAAADAAsAAAABADcAAAADAAoAAAABADcAAAADAAkAAAABADcAAAAEAAgAAAABADcAAAAFAAcAAAABADcAAAAGAAYAAAABADcAAAAHAAYAAAABADcAAAAHAAcAAAABADcAAAAIAAcAAAABADcAAAAJAAgAAAABADcAAAAKAAgAAAABADcAAAALAAkAAAABADcAAAAMAAkAAAABADcAAAANAAkAAAABADcAAAAOAAkAAAABADcAAAAPAAkAAAABADcAAAAQAAkAAAABADcAAAARAAkAAAABADcAAAASAAkAAAABADcAAAATAAkAAAABADcAAAAUAAkAAAABADcAAAAVAAkAAAABADcAAAAXAAkAAAABADcAAAAYAAkAAAABADcAAAAZAAoAAAABADcAAAAaAAoAAAABADcAAAAbAAoAAAABADcAAAADAAMAAAABADcAAAADAAQAAAABADcAAAACAAQAAAABADcAAAACAAUAAAABADcAAAACAAYAAAABADcAAAADAAYAAAABADcAAAAEAAUAAAABADcAAAAFAAUAAAABADcAAAAGAAUAAAABADcAAAAHAAQAAAABADcAAAAFAAYAAAABADcAAAAEAAcAAAABADcAAAAGAAcAAAABADcAAAAIAAYAAAABADcAAAAJAAYAAAABADcAAAAKAAYAAAABADcAAAALAAUAAAABADcAAAAMAAUAAAABADcAAAAMAAYAAAABADcAAAALAAYAAAABADcAAAALAAcAAAABADcAAAALAAgAAAABADcAAAAMAAgAAAABADcAAAANAAcAAAABADcAAAAOAAcAAAABADcAAAAPAAcAAAABADcAAAAQAAYAAAABADcAAAARAAYAAAABADcAAAASAAUAAAABADcAAAATAAUAAAABADcAAAAUAAQAAAABADcAAAAIAAgAAAABADcAAAAHAAkAAAABADcAAAAGAAkAAAABADcAAAAFAAoAAAABADcAAAAFAAsAAAABADcAAAAEAAsAAAABADcAAAAGAAsAAAABADcAAAAHAAsAAAABADcAAAAIAAsAAAABADcAAAAJAAoAAAABADcAAAAKAAoAAAABADcAAAANAAgAAAABADcAAAAOAAgAAAABADcAAAAKAAsAAAABADcAAAAKAAwAAAABADcAAAAKAA0AAAABADcAAAALAA0AAAABADcAAAAMAA0AAAABADcAAAANAAwAAAABADcAAAAOAAsAAAABADcAAAAPAAsAAAABADcAAAAQAAoAAAABADcAAAAQAAsAAAABADcAAAAPAAwAAAABADcAAAAOAA0AAAABADcAAAAPAA0AAAABADcAAAATAAwAAAABADcAAAASAA0AAAABADcAAAARAA0AAAABADcAAAASAA4AAAABADcAAAATAA0AAAABADcAAAAUAA0AAAABADcAAAAVAA0AAAABADcAAAAWAA0AAAABADcAAAAXAA0AAAABADcAAAAXAA4AAAABADcAAAAYAA4AAAABADcAAAAGABEAAAABADcAAAAHABEAAAABADcAAAAJABEAAAABADcAAAAKABEAAAABADcAAAALABEAAAABADcAAAAMABEAAAABADcAAAANABEAAAABADcAAAAOABEAAAABADcAAAAPABEAAAABADcAAAAQABEAAAABADcAAAARABEAAAABADcAAAAUABEAAAABADcAAAAVABEAAAABADcAAAATABEAAAABADcAAAASABEAAAABADcAAAAWABEAAAABADcAAAAXABEAAAABADcAAAAYABEAAAABADcAAAAZABEAAAABADcAAAAaABEAAAABADcAAAAbABEAAAABADcAAAAcABEAAAABADcAAAAdABEAAAABADcAAAAdAAAAAAABADcAAAAAAAAAAAABADcAAAADAAwAAAABADcAAAADAA0AAAABADcAAAADAA4AAAABADcAAAADAA8AAAABADcAAAADABAAAAABADcAAAAEAAwAAAABADcAAAAEAA0AAAABADcAAAAEAA4AAAABADcAAAAEAA8AAAABADcAAAAEABAAAAABADcAAAAFAAwAAAABADcAAAAFAA0AAAABADcAAAAFAA4AAAABADcAAAAFAA8AAAABADcAAAAFABAAAAABADcAAAAGAAwAAAABADcAAAAGAA0AAAABADcAAAAGAA4AAAABADcAAAAGAA8AAAABADcAAAAGABAAAAABADcAAAACABEAAAABADcAAAADABEAAAABADcAAAAEABEAAAABADcAAAAFABEAAAABADcAAAAdABAAAAABADcAAAAdAA8AAAABADcAAAAdAA4AAAABADcAAAAdAA0AAAABADcAAAAdAAwAAAABADcAAAAdAAsAAAABADcAAAAdAAoAAAABADcAAAAdAAkAAAABADcAAAAdAAgAAAABADcAAAAdAAcAAAABADcAAAAdAAYAAAABADcAAAAdAAUAAAABADcAAAAdAAQAAAABADcAAAAdAAMAAAABADcAAAAdAAIAAAABADcAAAAdAAEAAAABADcAAAAAAAEAAAABADcAAAAAAAIAAAABADcAAAAAAAMAAAABADcAAAAAAAQAAAABADcAAAAAAAUAAAABADcAAAAAAAYAAAABADcAAAAAAAcAAAABADcAAAAAAAgAAAABADcAAAAAAAkAAAABADcAAAABAAAAAAABADcAAAACAAAAAAABADcAAAADAAAAAAABADcAAAAEAAAAAAABADcAAAAFAAAAAAABADcAAAAGAAAAAAABADcAAAAHAAAAAAABADcAAAAIAAAAAAABADcAAAAJAAAAAAABADcAAAAKAAAAAAABADcAAAAcAAAAAAABADcAAAAbAAAAAAABADcAAAAaAAAAAAABADcAAAAZAAAAAAABADcAAAAYAAAAAAABADcAAAAXAAAAAAABADcAAAAWAAAAAAABADcAAAAVAAAAAAABADcAAAAUAAAAAAABADcAAAATAAAAAAABADcAAAASAAAAAAABADcAAAARAAAAAAABADcAAAAQAAAAAAABADcAAAAPAAAAAAABADcAAAAOAAAAAAABADcAAAANAAAAAAABADcAAAAMAAAAAAABADcAAAALAAAAAAABADcAAAAPAA8AAAABADcAAAAQAA8AAAABADcAAAAPABAAAAABADcAAAAQABAAAAABADcAAAARABAAAAABADcAAAASABAAAAABADcAAAATABAAAAABADcAAAAUABAAAAABADcAAAAVABAAAAABADcAAAAWABAAAAABADcAAAAXABAAAAABADcAAAAaABAAAAABADcAAAAbABAAAAABADcAAAAcABAAAAABADcAAAAbAA8AAAABADcAAAAcAA8AAAABADcAAAAbAA4AAAABADcAAAAcAA4AAAABADcAAAAbAA0AAAABADcAAAAcAA0AAAABADcAAAAbAAwAAAABADcAAAAcAAwAAAABADcAAAAbAAsAAAABADcAAAAcAAsAAAABADcAAAAaAA8AAAABADcAAAAaAA4AAAABADcAAAAZAA4AAAABADcAAAAaAA0AAAABADcAAAAZAA0AAAABADcAAAAaAAsAAAABADcAAAAZAAsAAAABADcAAAAaAAwAAAABADcAAAAZAAwAAAABADcAAAAXAA8AAAABADcAAAAWAA8AAAABADcAAAAVAA8AAAABADcAAAAUAA8AAAABADcAAAATAA8AAAABADcAAAASAA8AAAABADcAAAARAA8AAAABADcAAAAYAAwAAAABADcAAAAXAAwAAAABADcAAAAWAAwAAAABADcAAAAVAAwAAAABADcAAAAUAAwAAAABADcAAAAQAAwAAAABADcAAAAOAAwAAAABADcAAAAMAAwAAAABADcAAAALAAwAAAABADcAAAAJAAwAAAABADcAAAAIAAwAAAABADcAAAAOAA8AAAABADcAAAALAA8AAAABADcAAAAKAA8AAAABADcAAAAJAA8AAAABADcAAAAIAA8AAAABADcAAAAYAA0AAAABADcAAAAUAA4AAAABADcAAAAWAA4AAAABADcAAAAVAA4AAAABADcAAAATAA4AAAABADcAAAARAA4AAAABADcAAAAQAA4AAAABADcAAAAOABAAAAABADcAAAAbAAkAAAABADcAAAAYAAoAAAABADcAAAAXAAoAAAABADcAAAAZAAkAAAABADcAAAAWAAgAAAABADcAAAAYAAgAAAABADcAAAAZAAcAAAABADcAAAAVAAgAAAABADcAAAAXAAcAAAABADcAAAAWAAcAAAABADcAAAAVAAcAAAABADcAAAAUAAgAAAABADcAAAARAAoAAAABADcAAAATAAoAAAABADcAAAASAAoAAAABADcAAAARAAsAAAABADcAAAASAAsAAAABADcAAAAUAAsAAAABADcAAAAVAAsAAAABADcAAAAWAAoAAAABADcAAAAWAAsAAAABADcAAAAXAAsAAAABADcAAAAYAAsAAAABADcAAAAMABAAAAABADcAAAANABAAAAABADcAAAAIABAAAAABADcAAAAHABAAAAABADcAAAAHAA8AAAABADcAAAAHAA4AAAABADcAAAAHAA0AAAABADcAAAAHAAwAAAABADcAAAAIAA0AAAABADcAAAAIAA4AAAABADcAAAAJAA0AAAABADcAAAAJAA4AAAABADcAAAAKAA4AAAABADcAAAANAA0AAAABADcAAAANAA4AAAABADcAAAAMAA4AAAABADcAAAACAA0AAAABADcAAAABAA0AAAABADcAAAACAAwAAAABADcAAAABAAwAAAABADcAAAACAAsAAAABADcAAAABAA4AAAABADcAAAACAA4AAAABADcAAAABAA8AAAABADcAAAACAA8AAAABADcAAAACABAAAAABADcAAAABABAAAAABADcAAAAcAAIAAAABADcAAAAcAAMAAAABADcAAAAbAAMAAAABADcAAAAbAAEAAAABADcAAAAaAAEAAAABADcAAAAZAAEAAAABADcAAAAYAAIAAAABADcAAAAXAAIAAAABADcAAAAYAAEAAAABADcAAAAXAAEAAAABADcAAAAWAAEAAAABADcAAAAVAAIAAAABADcAAAAUAAIAAAABADcAAAATAAIAAAABADcAAAASAAIAAAABADcAAAARAAIAAAABADcAAAAQAAIAAAABADcAAAAPAAMAAAABADcAAAAOAAMAAAABADcAAAANAAMAAAABADcAAAAMAAMAAAABADcAAAALAAMAAAABADcAAAANAAIAAAABADcAAAAOAAIAAAABADcAAAAPAAEAAAABADcAAAAQAAEAAAABADcAAAARAAEAAAABADcAAAASAAEAAAABADcAAAATAAEAAAABADcAAAAPAAIAAAABADcAAAAMAAIAAAABADcAAAALAAIAAAABADcAAAAOAAEAAAABADcAAAANAAEAAAABADcAAAAMAAEAAAABADcAAAALAAEAAAABADcAAAAKAAEAAAABADcAAAAJAAEAAAABADcAAAAJAAIAAAABADcAAAAKAAIAAAABADcAAAAUAAEAAAABADcAAAAIAAIAAAABADcAAAAHAAIAAAABADcAAAAGAAIAAAABADcAAAAFAAIAAAABADcAAAAEAAIAAAABADcAAAACAAMAAAABADcAAAABAAMAAAABADcAAAAEAAMAAAABADcAAAAHAAEAAAABADcAAAAGAAEAAAABADcAAAAFAAEAAAABADcAAAAEAAEAAAABADcAAAADAAIAAAABADcAAAACAAIAAAABADcAAAABAAIAAAABADcAAAADAAEAAAABADcAAAACAAEAAAABADcAAAABAAEAAAABADcAAAABAAQAAAABADcAAAAIAAEAAAABADcAAAAIAAMAAAABADcAAAAHAAMAAAABADcAAAAGAAMAAAABADcAAAAFAAQAAAABADcAAAAEAAQAAAABADcAAAABAAUAAAABADcAAAABAAYAAAABADcAAAAIAAQAAAABADcAAAAJAAQAAAABADcAAAAKAAQAAAABADcAAAALAAQAAAABADcAAAAIAAUAAAABADcAAAAHAAUAAAABADcAAAAEAAYAAAABADcAAAADAAcAAAABADcAAAACAAcAAAABADcAAAABAAcAAAABADcAAAABAAgAAAABADcAAAAJAAUAAAABADcAAAAFAAMAAAABADcAAAACAAgAAAABADcAAAABAAkAAAABADcAAAACAAkAAAABADcAAAADAAgAAAABADcAAAAFAAgAAAABADcAAAABAAoAAAABADcAAAACAAoAAAABADcAAAAEAAkAAAABADcAAAABAAsAAAABADcAAAAFAAkAAAABADcAAAAEAAoAAAABADcAAAAGAAoAAAABADcAAAAHAAoAAAABADcAAAAIAAkAAAABADcAAAAJAAkAAAABADcAAAAMAAcAAAABADcAAAAPAAYAAAABADcAAAAOAAYAAAABADcAAAAKAAkAAAABADcAAAAIAAoAAAABADcAAAASAAYAAAABADcAAAAQAAcAAAABADcAAAAJAAsAAAABADcAAAALAAoAAAABADcAAAAMAAoAAAABADcAAAAPAAgAAAABADcAAAAQAAgAAAABADcAAAARAAcAAAABADcAAAASAAcAAAABADcAAAATAAYAAAABADcAAAALAAsAAAABADcAAAAMAAsAAAABADcAAAANAAsAAAABADcAAAAOAAoAAAABADcAAAAPAAoAAAABADcAAAATAAgAAAABADcAAAAcAAYAAAABADcAAAAYAAYAAAABADcAAAAYAAUAAAABADcAAAAXAAYAAAABADcAAAAWAAYAAAABADcAAAAUAAcAAAABADcAAAASAAgAAAABADcAAAARAAgAAAABADcAAAATAAcAAAABADcAAAAUAAYAAAABADcAAAAVAAYAAAABADcAAAAWAAUAAAABADcAAAAXAAUAAAABADcAAAAZAAQAAAABADcAAAAaAAQAAAABADcAAAAbAAQAAAABADcAAAAcAAQAAAABADcAAAAZAAUAAAABADcAAAAYAAQAAAABADcAAAAVAAUAAAABADcAAAARAAUAAAABADcAAAATAAQAAAABADcAAAAVAAQAAAABADcAAAAWAAQAAAABADcAAAAUAAUAAAABADcAAAAKAAcAAAABADcAAAAHAAgAAAABADcAAAAQAAUAAAABADcAAAAPAAUAAAABADcAAAANAAYAAAABADcAAAAJAAcAAAABADcAAAAGAAgAAAABADcAAAANAAUAAAABADcAAAAOAAUAAAABADcAAAAPAAQAAAABADcAAAAQAAQAAAABADcAAAARAAQAAAABADcAAAASAAMAAAABADcAAAATAAMAAAABADcAAAAUAAMAAAABADcAAAASAAQAAAABADcAAAAKAAUAAAABADcAAAAMAAQAAAABADcAAAANAAQAAAABADcAAAAQAAMAAAABADcAAAAJAAMAAAABADcAAAAKAAMAAAABADcAAAAGAAQAAAABADcAAAADAAUAAAABADcAAAAVAAEAAAABADcAAAAWAAIAAAABADcAAAAVAAMAAAABADcAAAAWAAMAAAABADcAAAAXAAMAAAABADcAAAAZAAIAAAABADcAAAAYAAMAAAABADcAAAAaAAIAAAABADcAAAAcAAEAAAABADcAAAAbAAIAAAABADcAAAAaAAMAAAABADcAAAAZAAMAAAABADcAAAAcAAUAAAABADcAAAAbAAUAAAABADcAAAAbAAcAAAABADcAAAAaAAgAAAABADcAAAAZAAgAAAABADcAAAAcAAcAAAABADcAAAAbAAgAAAABADcAAAAaAAkAAAABADcAAAAcAAgAAAABADcAAAAcAAkAAAABADcAAAAcAAoAAAABADcAAAAaAAcAAAABADcAAAAaAAUAAAABADcAAAAXAAQAAAABADcAAAAOAAQAAAABADcAAAARAAMAAAABADcAAAAAABEAAAABADcAAAAAABAAAAABADcAAAAAAA8AAAABADcAAAAAAA4AAAABADcAAAAAAA0AAAABADcAAAAAAAwAAAABADcAAAAAAAsAAAABADcAAAAAAAoAAAABADcAAAABABEAAAABADcAAAANAAoAAAABADcAAAALAA4AAAABADcAAAAYAA8AAAABADcAAAAYABAAAAABADcAAAAZAA8AAAABADcAAAAZABAAAAABADcAAAA=")
tile_set = SubResource("TileSet_fcxr8")

[node name="DerelictBG2" type="TileMapLayer" parent="TileMapLayers"]
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAWAAEAAAACAA8AAAAXAAEAAAADAA8AAAALAAEAAAABABAAAAAKAAEAAAADAA8AAAAIAAEAAAAAABAAABAZAFIAAAADADEAAAA=")
tile_set = SubResource("TileSet_fcxr8")

[node name="TransitionDoor" parent="." instance=ExtResource("3_xlg2d")]
unique_name_in_owner = true
position = Vector2(912, 926)

[node name="Walls" type="StaticBody2D" parent="."]

[node name="TilesTop" type="TileMapLayer" parent="Walls"]
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAKAAAAAAADAAUAAAAcAAAAAAADAAUAAAAbAAAAAAADAAUAAAAaAAAAAAADAAUAAAAZAAAAAAADAAUAAAAYAAAAAAADAAUAAAAXAAAAAAADAAUAAAAWAAAAAAADAAUAAAAVAAAAAAADAAUAAAAUAAAAAAADAAUAAAATAAAAAAADAAUAAAASAAAAAAADAAUAAAARAAAAAAADAAUAAAAQAAAAAAADAAUAAAAPAAAAAAADAAUAAAAOAAAAAAADAAUAAAANAAAAAAADAAUAAAAMAAAAAAADAAUAAAALAAAAAAADAAUAAAABAAAAAAADAAUAAAAIAAAAAAADAAUAAAAJAAAAAAADAAUAAAAHAAAAAAADAAUAAAAGAAAAAAADAAUAAAAFAAAAAAADAAUAAAAEAAAAAAADAAUAAAADAAAAAAADAAUAAAACAAAAAAADAAUAAAAAAAAAAAADAAUAAAAdAAAAAAADAAUAAAA=")
tile_set = SubResource("TileSet_fcxr8")

[node name="TilesBottom" type="TileMapLayer" parent="Walls"]
scale = Vector2(8, 8)
tile_map_data = PackedByteArray("AAAdABEAAAAAAAIAAAAAABEAAAAAAAIAAAALABEAAAAAAAIAAAAMABEAAAAAAAIAAAANABEAAAAAAAIAAAAOABEAAAAAAAIAAAAPABEAAAAAAAIAAAAQABEAAAAAAAIAAAARABEAAAAAAAIAAAASABEAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_fcxr8")

[node name="Left" type="CollisionShape2D" parent="Walls"]
position = Vector2(32.125, 1116)
shape = SubResource("RectangleShape2D_d17c4")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Left"]
position = Vector2(-139.5, -293)
occluder = SubResource("OccluderPolygon2D_2ws8c")

[node name="Right" type="CollisionShape2D" parent="Walls"]
position = Vector2(1888, 1116)
shape = SubResource("RectangleShape2D_xlg2d")

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Right"]
position = Vector2(-90, -293)
occluder = SubResource("OccluderPolygon2D_g5msa")

[node name="Top" type="CollisionShape2D" parent="Walls"]
position = Vector2(959.625, 29)
shape = SubResource("RectangleShape2D_ya37f")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Walls/Top"]
position = Vector2(-962, 56)
occluder = SubResource("OccluderPolygon2D_xlvgl")

[node name="Bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2(961, 1120.5)
shape = SubResource("RectangleShape2D_xlvgl")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="Walls/Bottom"]
position = Vector2(-962, 100)
occluder = SubResource("OccluderPolygon2D_rjq5q")

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(804, 970)

[node name="EnemySpawn" type="Marker2D" parent="."]
position = Vector2(1134, 972)
